[gd_scene load_steps=15 format=3 uid="uid://be3p88ka45p15"]

[ext_resource type="PackedScene" uid="uid://xoqhtny3wi7s" path="res://godot4/elements/gates/PortalGate.tscn" id="1"]
[ext_resource type="PackedScene" path="res://combat/traits/Goal.tscn" id="2"]
[ext_resource type="PackedScene" path="res://combat/traits/Owned.tscn" id="3"]
[ext_resource type="Script" uid="uid://bnjbn20g042a3" path="res://actors/environments/GoalPortalGate.gd" id="4"]
[ext_resource type="FontFile" uid="uid://cr1ufi8wpbpqp" path="res://assets/fonts/04b_19.ttf" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(250, 500)

[sub_resource type="Animation" id="2"]
resource_name = "Blink"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RingPart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1.6, 1.6, 1.6, 1), Color(1.2, 1.2, 1.2, 1)]
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RingPart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.2, 1.2, 1.2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_po8ge"]
_data = {
&"Blink": SubResource("2"),
&"RESET": SubResource("3")
}

[sub_resource type="GDScript" id="10"]
script/source = "extends Node2D

func _process(_delta):
	global_rotation = 0
"

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("5")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="12"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(1, 1, 1, 0.627451), Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l6owi"]
_data = {
&"Idle": SubResource("12"),
&"RESET": SubResource("13")
}

[node name="GoalPortalGate" instance=ExtResource("1")]
script = ExtResource("4")
goal_owner = NodePath("")

[node name="Owned" parent="." index="0" instance=ExtResource("3")]

[node name="Goal" parent="." index="1" instance=ExtResource("2")]

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource("1")

[node name="AnimationPlayer" parent="." index="7"]
libraries = {
"": SubResource("AnimationLibrary_po8ge")
}

[node name="NoRotate" type="Node2D" parent="." index="8"]
position = Vector2(-200, 0)
script = SubResource("10")

[node name="PlayerLabel" type="Label" parent="NoRotate" index="0"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.784314)
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
theme_override_fonts/font = SubResource("11")
text = "PPP"

[node name="DefenseZone" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DefenseZone" index="0"]
polygon = PackedVector2Array(-350, -500, -300, -550, -200, -600, 0, -650, 100, -650, 300, -600, 450, -500, 550, -400, 650, -250, 700, -50, 700, 50, 650, 250, 550, 400, 450, 500, 300, 600, 100, 650, 0, 650, -200, 600, -300, 550, -350, 500)

[node name="AnimationPlayer" parent="PortalEffect/Inside" index="0"]
libraries = {
"": SubResource("AnimationLibrary_l6owi")
}

[connection signal="body_entered" from="DefenseZone" to="." method="_on_DefenseZone_body_entered"]
